--- a/about.html
+++ b/about.html
@@ -24,109 +24,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-TJBN6P5P");
-    </script>
-    <!-- End Google Tag Manager -->
-
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1101899361295319");
-      fbq("track", "PageView");
-    </script>
-    <noscript>
-      <img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1101899361295319&ev=PageView&noscript=1"
-      />
-    </noscript>
-    <!-- End Meta Pixel Code -->
-
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1142570597698056");
-      fbq("track", "PageView");
-    </script>
-    <noscript>
-      <img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1142570597698056&ev=PageView&noscript=1"
-      />
-    </noscript>
-    <!-- End Meta Pixel Code -->
-  </head>
-
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-TJBN6P5P"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    
 
     <!-- Fixed Header Wrapper -->
     <div class="fixed-header-wrapper">
@@ -134,8 +32,8 @@
       <!-- Top Header -->
       <div class="top-header">
         <div class="left-contact">
-          <i class="fas fa-envelope"></i> chidambaram@adgrohair.com &nbsp; |
-          &nbsp; <i class="fas fa-phone"></i> +91 9411656789
+          <i class="fas fa-envelope"></i>grohairgloskin@gmail.com &nbsp; |
+          &nbsp; <i class="fas fa-phone"></i> 84890 56789
         </div>
         <div class="social-icons">
           <a href="https://instagram.com" target="_blank"
@@ -190,9 +88,9 @@
         <!-- Right Content -->
         <div class="spa-content">
           <p class="sub-title">We Provide</p>
-          <h2>Welcome to GroHair & GloSkin Chidambaram</h2>
+          <h2>Welcome to GroHair & GloSkin HRBR Layout</h2>
           <p class="intro">
-            At GroHair & GloSkin Chidambaram, we bring clinical precision
+            At GroHair & GloSkin HRBR Layout, we bring clinical precision
             together with a relaxing, modern space to offer the most advanced
             hair and skincare solutions. Whether you’re restoring your crown
             with hair therapy or glowing up your skin with aesthetic care—our
@@ -218,11 +116,11 @@
         <div class="accordion">
           <div class="accordion-item active">
             <button class="accordion-header">
-              What hair loss treatments are available in Chidambaram?
+              What hair loss treatments are available in HRBR Layout?
             </button>
             <div class="accordion-content">
               <p>
-                At GroHair Chidambaram, we provide FUE Hair Transplants, PRP
+                At GroHair HRBR Layout, we provide FUE Hair Transplants, PRP
                 therapy, Mesotherapy, Scalp Micropigmentation, and Low-Level
                 Laser Therapy to control hair fall and support healthy regrowth.
               </p>
@@ -307,11 +205,11 @@
 
           <div class="accordion-item">
             <button class="accordion-header">
-              How can I book a consultation with the GroHair Chidambaram team?
+              How can I book a consultation with the GroHair HRBR Layout team?
             </button>
             <div class="accordion-content">
               <p>
-                You can call us, walk into our Chidambaram clinic, or schedule
+                You can call us, walk into our HRBR Layout clinic, or schedule
                 through our online form. We'll set you up with a personalized
                 session.
               </p>
@@ -374,7 +272,7 @@
 
           <div class="accordion-item">
             <button class="accordion-header">
-              Is laser hair removal available in Chidambaram?
+              Is laser hair removal available in HRBR Layout?
             </button>
             <div class="accordion-content">
               <p>
@@ -410,11 +308,11 @@
 
           <div class="accordion-item">
             <button class="accordion-header">
-              How do I get started at GloSkin Chidambaram?
+              How do I get started at GloSkin HRBR Layout?
             </button>
             <div class="accordion-content">
               <p>
-                Simply drop by our Chidambaram center or reach out online to
+                Simply drop by our HRBR Layout center or reach out online to
                 book a custom skin consultation. Let’s glow!
               </p>
             </div>
@@ -443,21 +341,20 @@
         <div class="grofooter-contact">
           <h3 class="grofooter-heading">Contact</h3>
           <p>
-            First Floor, 88, E Car St, above HDFC Bank, Chidambaram, Tamil Nadu
-            608001
+          No.313, VJ Arcade,7th Main Rd 2nd Block, Kalyan Nagar, HRBR Layout, Urban, Bengaluru, Karnataka 560043
           </p>
 
           <div class="grofooter-contact-line">
             <span class="grofooter-icon">📞</span>
             <a href="tel:++919411656789" class="grofooter-link"
-              >+91 9411656789</a
+              >84890 56789</a
             >
           </div>
 
           <div class="grofooter-contact-line">
             <span class="grofooter-icon">📧</span>
             <a href="mailto:chidambaram@adgrohair.com" class="grofooter-link">
-              chidambaram@adgrohair.com
+             grohairgloskin@gmail.com
             </a>
           </div>
         </div>
@@ -475,15 +372,11 @@
         <!-- Column 4: Locations (Map Embed) -->
         <div class="grofooter-map">
           <h3 class="grofooter-heading">Locations</h3>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3911.1340125160855!2d79.69362527481456!3d11.39781138879127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a54c3c6d6145e8f%3A0xd45d742e497deb28!2sAdvanced%20GroHair%20%26%20GloSkin%20-%20Chidambaram!5e0!3m2!1sen!2sin!4v1750845445415!5m2!1sen!2sin"
-            width="100%"
-            height="200"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.748591082235!2d77.64046717507728!3d13.020463787299477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae17fbb76c43c5%3A0xced307e545552cf5!2sAdvanced%20GroHair%20%26%20GloSkin%20Clinic%20-%20HRBR%20Layout!5e1!3m2!1sen!2sin!4v1767593810675!5m2!1sen!2sin"
+          width="100%"
+            height="200" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </section>
