--- a/index.html
+++ b/index.html
@@ -3,20 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GroHair & GloSkin – Advanced Hair & Skin Care in Chidambaram</title>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R98WGNB6WP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-R98WGNB6WP');
-</script>
+    <title>GroHair & GloSkin – Advanced Hair & Skin Care in HRBR Layout</title>
+   
 <meta name="google-site-verification" content="1wue7BBeB-3CBJXBgdlmYqvm14ifhSTFV7g5K6TNDoM" />
     <meta
       property="og:title"
-      content="GroHair & GloSkin – Advanced Hair & Skin Care in Chidambaram"
+      content="GroHair & GloSkin – Advanced Hair & Skin Care in HRBR Layout"
     />
     <meta
       property="og:description"
@@ -32,14 +24,14 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="adgrohairgloskinchidambaram.in" />
+    <meta property="twitter:domain" content="adgrohairgloskinHRBR Layout.in" />
     <meta
       property="twitter:url"
       content="https://adgrohairgloskinchidambaram.in/"
     />
     <meta
       name="twitter:title"
-      content="GroHair & GloSkin - Advanced Hair & Skin Care in Chidambaram"
+      content="GroHair & GloSkin - Advanced Hair & Skin Care in HRBR Layout"
     />
     <meta
       name="twitter:description"
@@ -70,108 +62,20 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-TJBN6P5P");
-    </script>
-    <!-- End Google Tag Manager -->
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1101899361295319");
-      fbq("track", "PageView");
-    </script>
-    <noscript>
-      <img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1101899361295319&ev=PageView&noscript=1"
-      />
-    </noscript>
-    <!-- End Meta Pixel Code -->
-
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1142570597698056");
-      fbq("track", "PageView");
-    </script>
-    <noscript>
-      <img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1142570597698056&ev=PageView&noscript=1"
-      />
-    </noscript>
-    <!-- End Meta Pixel Code -->
+   
 
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
-        "name": "GroHair & GloSkin Chidambaram",
+        "name": "GroHair & GloSkin HRBR Layout",
         "image": "https://adgrohairthanjavur.com/img/about.jpg",
         "url": "https://adgrohairgloskinchidambaram.in//",
         "telephone": "+919411656789",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "First Floor, 88, E Car St, above HDFC Bank, Chidambaram,",
-          "addressLocality": "Chidambaram",
+          "streetAddress": "First Floor, 88, E Car St, above HDFC Bank, HRBR Layout,",
+          "addressLocality": "HRBR Layout",
           "addressRegion": "Tamil Nadu",
           "postalCode": "608001",
           "addressCountry": "IN"
@@ -180,32 +84,23 @@
         "priceRange": "₹₹",
         "sameAs": [
           "https://www.facebook.com/grohairchidambaram",
-          "https://www.instagram.com/grohairchidambaram"
+          "https://www.instagram.com/adgrogloclinic.hrbrlayout?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
+https://www.instagram.com/adgloskinclinichrbrlayout/"
         ]
       }
     </script>
   </head>
 
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-TJBN6P5P"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
+   
     <!-- Fixed Header Wrapper -->
     <div class="fixed-header-wrapper">
       <!-- Top Header -->
       <!-- Top Header -->
       <div class="top-header">
         <div class="left-contact">
-          <i class="fas fa-envelope"></i> chidambaram@adgrohair.com &nbsp; |
-          &nbsp; <i class="fas fa-phone"></i> +91 9411656789
+          <i class="fas fa-envelope"></i>grohairgloskin@gmail.com &nbsp; |
+          &nbsp; <i class="fas fa-phone"></i> 84890 56789
         </div>
         <div class="social-icons">
           <a href="https://instagram.com" target="_blank"
@@ -252,11 +147,11 @@
     <div class="hero-section">
       <div class="hero-left">
         <h1 style="color: #ea2127">
-          Hair & Skin Wellness in Chidambaram – Tailored to Your Lifestyle
+          Hair & Skin Wellness in HRBR Layout – Tailored to Your Lifestyle
         </h1>
         <p>
           GroHair and GloSkin proudly bring expert care in hair restoration and
-          skin health to Chidambaram. Our certified trichologists and skincare
+          skin health to HRBR Layout. Our certified trichologists and skincare
           professionals deliver customized treatments focused on effective,
           lasting results.
         </p>
@@ -288,15 +183,15 @@
         <!-- Right Content -->
         <div class="spa-content">
           <p class="sub-title">We Provide</p>
-          <h2>Welcome to GroHair & GloSkin Chidambaram</h2>
+          <h2>Welcome to GroHair & GloSkin HRBR Layout</h2>
           <p class="intro">
             GroHair and GloSkin combine their deep expertise in hair and skin
-            wellness with the serene pace of Chidambaram. Our clinic blends
+            wellness with the serene pace of HRBR Layout. Our clinic blends
             clinical precision with a luxurious experience, delivered by trained
             professionals in a safe, sterile setting.
           </p>
           <p class="description">
-            At our Chidambaram center, you’ll find the best of science,
+            At our HRBR Layout center, you’ll find the best of science,
             technology, and personalized care. Whether it’s hair thinning,
             pigmentation issues, premature aging, or any other concern—you’ll
             find solutions tailored just for you, backed by trusted
@@ -310,17 +205,17 @@
     <section class="services-intro">
       <div class="service-content">
         <h2>
-          Leading Hair & Skin Treatments at GroHair & GloSkin – Chidambaram
+          Leading Hair & Skin Treatments at GroHair & GloSkin – HRBR Layout
         </h2>
         <p class="lead">
-          At GroHair & GloSkin Chidambaram, we use proven hair restoration
+          At GroHair & GloSkin HRBR Layout, we use proven hair restoration
           techniques and modern dermatological skincare. Our team pairs advanced
           tech with clinical expertise for results that are not just visible,
           but long-lasting.
         </p>
         <p class="desc">
           Whatever your goal—restoring hair volume, achieving clearer skin, or
-          exploring cosmetic treatments—our Chidambaram clinic is equipped to
+          exploring cosmetic treatments—our HRBR Layout clinic is equipped to
           meet it.
         </p>
 
@@ -359,7 +254,7 @@
           <!-- LEFT CONTENT -->
           <div class="col-lg-4 mb-4 mb-lg-0">
             <p class="text-muted small">
-              Top Skin Solutions at GloSkin Chidambaram
+              Top Skin Solutions at GloSkin HRBR Layout
             </p>
             <h2 class="mb-3 fw-semibold">Our Most Popular Skin Treatments</h2>
             <p class="text-muted">
@@ -494,7 +389,7 @@
           <!-- LEFT CONTENT -->
           <div class="col-lg-4 mb-4 mb-lg-0">
             <p class="text-muted small">
-              Most Popular Hair Solutions in Chidambaram
+              Most Popular Hair Solutions in HRBR Layout
             </p>
             <h2 class="mb-3 fw-semibold">Our Most Popular Hair Treatments</h2>
             <p class="text-muted">
@@ -631,9 +526,9 @@
         <div class="row align-items-center">
           <!-- Text Left -->
           <div class="col-lg-6 mb-4 mb-lg-0">
-            <h2 class="section-title">Why Chidambaram Clients Trust Us</h2>
+            <h2 class="section-title">Why HRBR Layout Clients Trust Us</h2>
             <p class="text-muted mb-4">
-              At GroHair & GloSkin Chidambaram, we combine advanced equipment,
+              At GroHair & GloSkin HRBR Layout, we combine advanced equipment,
               certified specialists, and a client-first mindset. That’s why
               we’re known for our consistent results and top-tier service.
             </p>
@@ -718,7 +613,7 @@
               />
               <div class="testimonial-name">Bhavik Kumar</div>
               <div class="testimonial-text">
-                “Professional, clean, and deeply caring. Chidambaram needed a
+                “Professional, clean, and deeply caring. HRBR Layout needed a
                 place like this. Blessings!”
               </div>
               <div class="testimonial-rating">★★★★★</div>
@@ -842,21 +737,20 @@
         <div class="grofooter-contact">
           <h3 class="grofooter-heading">Contact</h3>
           <p>
-            First Floor, 88, E Car St, above HDFC Bank, Chidambaram, Tamil Nadu
-            608001
+          No.313, VJ Arcade,7th Main Rd 2nd Block, Kalyan Nagar, HRBR Layout, Urban, Bengaluru, Karnataka 560043
           </p>
 
           <div class="grofooter-contact-line">
             <span class="grofooter-icon">📞</span>
             <a href="tel:++919411656789" class="grofooter-link"
-              >+91 9411656789</a
+              >84890 56789</a
             >
           </div>
 
           <div class="grofooter-contact-line">
             <span class="grofooter-icon">📧</span>
             <a href="mailto:chidambaram@adgrohair.com" class="grofooter-link">
-              chidambaram@adgrohair.com
+             grohairgloskin@gmail.com
             </a>
           </div>
         </div>
@@ -875,14 +769,10 @@
         <div class="grofooter-map">
           <h3 class="grofooter-heading">Locations</h3>
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3911.1340125160855!2d79.69362527481456!3d11.39781138879127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a54c3c6d6145e8f%3A0xd45d742e497deb28!2sAdvanced%20GroHair%20%26%20GloSkin%20-%20Chidambaram!5e0!3m2!1sen!2sin!4v1750845445415!5m2!1sen!2sin"
-            width="100%"
-            height="200"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.748591082235!2d77.64046717507728!3d13.020463787299477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae17fbb76c43c5%3A0xced307e545552cf5!2sAdvanced%20GroHair%20%26%20GloSkin%20Clinic%20-%20HRBR%20Layout!5e1!3m2!1sen!2sin!4v1767593810675!5m2!1sen!2sin"
+           width="100%"
+            height="200" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </section>
