--- a/service.html
+++ b/service.html
@@ -24,108 +24,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-TJBN6P5P");
-    </script>
-    <!-- End Google Tag Manager -->
-         <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1101899361295319");
-      fbq("track", "PageView");
-    </script>
-    <noscript>
-      <img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1101899361295319&ev=PageView&noscript=1"
-      />
-    </noscript>
-    <!-- End Meta Pixel Code -->
-
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1142570597698056");
-      fbq("track", "PageView");
-    </script>
-    <noscript>
-      <img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1142570597698056&ev=PageView&noscript=1"
-      />
-    </noscript>
-    <!-- End Meta Pixel Code -->
+   
   </head>
 
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-TJBN6P5P"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
+  
 
     <!-- Fixed Header Wrapper -->
     <div class="fixed-header-wrapper">
@@ -133,8 +36,8 @@
       <!-- Top Header -->
       <div class="top-header">
         <div class="left-contact">
-          <i class="fas fa-envelope"></i> chidambaram@adgrohair.com &nbsp; |
-          &nbsp; <i class="fas fa-phone"></i> +91 9411656789
+          <i class="fas fa-envelope"></i>grohairgloskin@gmail.com &nbsp; |
+          &nbsp; <i class="fas fa-phone"></i> 84890 56789
         </div>
         <div class="social-icons">
           <a href="https://instagram.com" target="_blank"
@@ -179,7 +82,7 @@
       <h2 class="section-title">Our Services</h2>
       <p class="section-subtitle">
         Unlock expert care in hair restoration and skincare at GroHair & GloSkin
-        Chidambaram. <br />From cutting-edge hair loss treatments to
+        HRBR Layout. <br />From cutting-edge hair loss treatments to
         rejuvenating skin therapies, we deliver results-focused solutions that
         enhance beauty, restore confidence, and support long-term wellness.
       </p>
@@ -244,11 +147,11 @@
           <!-- LEFT CONTENT -->
           <div class="col-lg-4 mb-4 mb-lg-0">
             <p class="text-muted small">
-              Popular at GroHair & GloSkin Chidambaram
+              Popular at GroHair & GloSkin HRBR Layout
             </p>
             <h2 class="mb-3 fw-semibold">Our Most Popular Skin Treatments</h2>
             <p class="text-muted">
-              GloSkin Chidambaram offers advanced skin care solutions tailored
+              GloSkin HRBR Layout offers advanced skin care solutions tailored
               for various concerns such as pigmentation, acne, dullness, and
               aging. Our treatments are dermatologist-designed to enhance skin
               tone, texture, and radiance with safe, clinically proven methods.
@@ -380,11 +283,11 @@
           <!-- LEFT CONTENT -->
           <div class="col-lg-4 mb-4 mb-lg-0">
             <p class="text-muted small">
-              Popular at GroHair & GloSkin Chidambaram
+              Popular at GroHair & GloSkin HRBR Layout
             </p>
             <h2 class="mb-3 fw-semibold">Our Most Popular Hair Treatments</h2>
             <p class="text-muted">
-              At GroHair Chidambaram, we specialize in advanced hair restoration
+              At GroHair HRBR Layout, we specialize in advanced hair restoration
               solutions designed to combat hair fall, thinning, and pattern
               baldness. Our treatments are scientifically backed and customized
               to help restore hair density, scalp health, and overall
@@ -532,21 +435,21 @@
         <div class="grofooter-contact">
           <h3 class="grofooter-heading">Contact</h3>
           <p>
-            First Floor, 88, E Car St, above HDFC Bank, Chidambaram, Tamil Nadu
+            First Floor, 88, E Car St, above HDFC Bank, HRBR Layout, Tamil Nadu
             608001
           </p>
 
           <div class="grofooter-contact-line">
             <span class="grofooter-icon">📞</span>
             <a href="tel:++919411656789" class="grofooter-link"
-              >+91 9411656789</a
+              >84890 56789</a
             >
           </div>
 
           <div class="grofooter-contact-line">
             <span class="grofooter-icon">📧</span>
-            <a href="mailto:chidambaram@adgrohair.com" class="grofooter-link">
-              chidambaram@adgrohair.com
+            <a href="mailto:grohairgloskin@gmail.com" class="grofooter-link">
+            grohairgloskin@gmail.com
             </a>
           </div>
         </div>
@@ -565,15 +468,11 @@
         <!-- Column 4: Locations (Map Embed) -->
         <div class="grofooter-map">
           <h3 class="grofooter-heading">Locations</h3>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3911.1340125160855!2d79.69362527481456!3d11.39781138879127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a54c3c6d6145e8f%3A0xd45d742e497deb28!2sAdvanced%20GroHair%20%26%20GloSkin%20-%20Chidambaram!5e0!3m2!1sen!2sin!4v1750845445415!5m2!1sen!2sin"
-            width="100%"
-            height="200"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.748591082235!2d77.64046717507728!3d13.020463787299477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae17fbb76c43c5%3A0xced307e545552cf5!2sAdvanced%20GroHair%20%26%20GloSkin%20Clinic%20-%20HRBR%20Layout!5e1!3m2!1sen!2sin!4v1767593810675!5m2!1sen!2sin"
+          width="100%"
+            height="200" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </section>
