--- a/contact.html
+++ b/contact.html
@@ -24,109 +24,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-TJBN6P5P");
-    </script>
-    <!-- End Google Tag Manager -->
-
-        <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1101899361295319");
-      fbq("track", "PageView");
-    </script>
-    <noscript>
-      <img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1101899361295319&ev=PageView&noscript=1"
-      />
-    </noscript>
-    <!-- End Meta Pixel Code -->
-
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "1142570597698056");
-      fbq("track", "PageView");
-    </script>
-    <noscript>
-      <img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=1142570597698056&ev=PageView&noscript=1"
-      />
-    </noscript>
-    <!-- End Meta Pixel Code -->
+  
   </head>
 
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-TJBN6P5P"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
+   
 
     <!-- Fixed Header Wrapper -->
     <div class="fixed-header-wrapper">
@@ -134,8 +36,8 @@
       <!-- Top Header -->
       <div class="top-header">
         <div class="left-contact">
-          <i class="fas fa-envelope"></i> chidambaram@adgrohair.com &nbsp; |
-          &nbsp; <i class="fas fa-phone"></i> +91 9411656789
+          <i class="fas fa-envelope"></i>grohairgloskin@gmail.com &nbsp; |
+          &nbsp; <i class="fas fa-phone"></i> 84890 56789
         </div>
         <div class="social-icons">
           <a href="https://instagram.com" target="_blank"
@@ -198,14 +100,13 @@
             <div class="info-box">
               <h3>📍 Address</h3>
               <p>
-                First Floor, 88, E Car St, above HDFC Bank, Chidambaram, Tamil
-                Nadu 608001
+              No.313, VJ Arcade,7th Main Rd 2nd Block, Kalyan Nagar, HRBR Layout, Urban, Bengaluru, Karnataka 560043
               </p>
             </div>
 
             <div class="info-box">
               <h3>📞 Phone</h3>
-              <p>+91 9411656789</p>
+              <p>84890 56789</p>
             </div>
 
             <div class="info-box">
@@ -302,21 +203,20 @@
         <div class="grofooter-contact">
           <h3 class="grofooter-heading">Contact</h3>
           <p>
-            First Floor, 88, E Car St, above HDFC Bank, Chidambaram, Tamil Nadu
-            608001
+            No.313, VJ Arcade,7th Main Rd 2nd Block, Kalyan Nagar, HRBR Layout, Urban, Bengaluru, Karnataka 560043
           </p>
 
           <div class="grofooter-contact-line">
             <span class="grofooter-icon">📞</span>
             <a href="tel:++919411656789" class="grofooter-link"
-              >+91 9411656789</a
+              >84890 56789</a
             >
           </div>
 
           <div class="grofooter-contact-line">
             <span class="grofooter-icon">📧</span>
             <a href="mailto:chidambaram@adgrohair.com" class="grofooter-link">
-              chidambaram@adgrohair.com
+             grohairgloskin@gmail.com
             </a>
           </div>
         </div>
@@ -335,15 +235,11 @@
         <!-- Column 4: Locations (Map Embed) -->
         <div class="grofooter-map">
           <h3 class="grofooter-heading">Locations</h3>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3911.1340125160855!2d79.69362527481456!3d11.39781138879127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a54c3c6d6145e8f%3A0xd45d742e497deb28!2sAdvanced%20GroHair%20%26%20GloSkin%20-%20Chidambaram!5e0!3m2!1sen!2sin!4v1750845445415!5m2!1sen!2sin"
-            width="100%"
-            height="200"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.748591082235!2d77.64046717507728!3d13.020463787299477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae17fbb76c43c5%3A0xced307e545552cf5!2sAdvanced%20GroHair%20%26%20GloSkin%20Clinic%20-%20HRBR%20Layout!5e1!3m2!1sen!2sin!4v1767593810675!5m2!1sen!2sin"
+         width="100%"
+            height="200" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </section>
@@ -359,7 +255,7 @@
 
     <!-- Footer End -->
 
-    <script>
+    <!-- <script>
       const dateInput = document.getElementById("appointmentDate");
       const today = new Date();
 
@@ -418,6 +314,6 @@
             alert("Something went wrong while submitting the form.");
           }
         });
-    </script>
+    </script> -->
   </body>
 </html>
