--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     <section class="contact-hero">
       <div class="contact-hero-overlay">
         <div class="container1 text-center">
-          <h1>Contact Page</h1>
+          <h1>Contact Us</h1>
           <p>
             We’re here to help — get in touch with us for appointments,
             questions, or feedback.
