--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     />
 
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/HRBR-Layout.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -64,31 +64,7 @@
     />
    
 
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "GroHair & GloSkin HRBR Layout",
-        "image": "https://adgrohairthanjavur.com/img/about.jpg",
-        "url": "https://adgrohairgloskinchidambaram.in//",
-        "telephone": "+919411656789",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "First Floor, 88, E Car St, above HDFC Bank, HRBR Layout,",
-          "addressLocality": "HRBR Layout",
-          "addressRegion": "Tamil Nadu",
-          "postalCode": "608001",
-          "addressCountry": "IN"
-        },
-        "openingHours": "Mo-Su 10:00AM-08:00PM",
-        "priceRange": "₹₹",
-        "sameAs": [
-          "https://www.facebook.com/grohairchidambaram",
-          "https://www.instagram.com/adgrogloclinic.hrbrlayout?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
-https://www.instagram.com/adgloskinclinichrbrlayout/"
-        ]
-      }
-    </script>
+    
   </head>
 
   <body>
@@ -119,7 +95,7 @@ https://www.instagram.com/adgloskinclinichrbrlayout/"
       <!-- Main Header -->
       <header class="main-header">
         <div class="logo">
-          <img src="./img/Logo-1.jpeg" alt="Logo" width="180px" />
+          <img src="./img/HRBR-Layout.png" alt="Logo" width="180px" />
         </div>
 
         <!-- Centered Nav -->
@@ -723,7 +699,7 @@ https://www.instagram.com/adgloskinclinichrbrlayout/"
         <!-- Column 1: Logo + Tagline -->
         <div class="grofooter-brand">
           <img
-            src="./img/Logo-1.jpeg"
+            src="./img/HRBR-Layout.png"
             alt="GroHair Logo"
             class="grofooter-logo"
           />
