--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About | Adv GroHair and GloSkin</title>
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/HRBR-Layout.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -54,7 +54,7 @@
 
       <header class="main-header">
         <div class="logo">
-          <img src="./img/Logo-1.jpeg" alt="Logo" width="180px" />
+          <img src="./img/HRBR-Layout.png" alt="Logo" width="180px" />
         </div>
 
         <!-- Centered Nav -->
@@ -422,7 +422,7 @@
         <!-- Column 1: Logo + Tagline -->
         <div class="grofooter-brand">
           <a href="index.html">
-            <img src="img/logo.jpg" alt="GroHair Logo" class="grofooter-logo" />
+            <img src="./img/HRBR-Layout.png" alt="GroHair Logo" class="grofooter-logo" />
           </a>
           <p class="grofooter-tagline">
             Restore your confidence today with our expert hair restoration
@@ -435,8 +435,7 @@
         <div class="grofooter-contact">
           <h3 class="grofooter-heading">Contact</h3>
           <p>
-            First Floor, 88, E Car St, above HDFC Bank, HRBR Layout, Tamil Nadu
-            608001
+          No.313, VJ Arcade,7th Main Rd 2nd Block, Kalyan Nagar, HRBR Layout, Urban, Bengaluru, Karnataka 560043
           </p>
 
           <div class="grofooter-contact-line">
