--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About | Adv GroHair and GloSkin</title>
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/HRBR-Layout.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -51,7 +51,7 @@
       <!-- Main Header -->
       <header class="main-header">
         <div class="logo">
-          <img src="./img/Logo-1.jpeg" alt="Logo" width="180px" />
+          <img src="./img/HRBR-Layout.png" alt="Logo" width="180px" />
         </div>
 
         <!-- Centered Nav -->
@@ -328,7 +328,7 @@
         <!-- Column 1: Logo + Tagline -->
         <div class="grofooter-brand">
           <a href="index.html">
-            <img src="img/logo.jpg" alt="GroHair Logo" class="grofooter-logo" />
+            <img src="./img/HRBR-Layout.png" alt="GroHair Logo" class="grofooter-logo" />
           </a>
           <p class="grofooter-tagline">
             Restore your confidence today with our expert hair restoration
