--- a/booking.html
+++ b/booking.html
@@ -63,7 +63,7 @@
       <!-- Main Header -->
       <header class="main-header">
         <div class="logo">
-          <img src="./img/Logo-1.jpeg" alt="Logo" width="180px" />
+          <img src="./img/HRBR-Layout.png" alt="Logo" width="180px" />
         </div>
 
         <!-- Centered Nav -->
@@ -163,7 +163,7 @@
         <!-- Column 1: Logo + Tagline -->
         <div class="grofooter-brand">
           <img
-            src="./img/Logo-1.jpeg"
+            src="./img/HRBR-Layout.png"
             alt="GroHair Logo"
             class="grofooter-logo"
           />
