--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact | Adv GroHair and GloSkin</title>
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/HRBR-Layout.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -54,7 +54,7 @@
 
       <header class="main-header">
         <div class="logo">
-          <img src="./img/Logo-1.jpeg" alt="Logo" width="180px" />
+          <img src="./img/HRBR-Layout.png" alt="Logo" width="180px" />
         </div>
 
         <!-- Centered Nav -->
@@ -189,7 +189,7 @@
         <!-- Column 1: Logo + Tagline -->
         <div class="grofooter-brand">
           <img
-            src="./img/Logo-1.jpeg"
+            src="./img/HRBR-Layout.png"
             alt="GroHair Logo"
             class="grofooter-logo"
           />
